fixes for the terminal panel: * assure that the correct directory is entered when reopening the terminal * let the terminal be focused also when reopening it

BUG: 153785
BUG: 153756

svn path=/trunk/KDE/kdebase/apps/; revision=749039